@@ -441,7 +441,11 @@ Title of current tune with optional maximum length specifier
 
 .TP 
 \fB\*(T<\fBbattery\fR\*(T>\fR \*(T<\fB(num)\fR\*(T> 
-Remaining capacity in ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
+Battery status and remaining percentage capacity of ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
+
+.TP 
+\fB\*(T<\fBbattery_time\fR\*(T>\fR \*(T<\fB(num)\fR\*(T> 
+Battery charge/discharge time remaining of ACPI battery. ACPI battery number can be given as argument (default is BAT0).
 
 .TP 
 \fB\*(T<\fBbmpx_artist\fR\*(T>\fR 
