@@ -236,7 +236,17 @@
 	<option>(num)</option>
 	</term>
 	<listitem>
-		Remaining capacity in ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
+		Battery status and remaining percentage capacity of ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
+	<para></para></listitem>
+</varlistentry>
+
+<varlistentry>
+	<term>
+		<command><option>battery_time</option></command>
+	<option>(num)</option>
+	</term>
+	<listitem>
+		Battery charge/discharge time remaining of ACPI battery.  ACPI battery number can be given as argument (default is BAT0).
 	<para></para></listitem>
 </varlistentry>
 
